# nekro-live-studio

./: .gitignore  1.py  README.md  VtubePluginDevelop.md  VtubePluginDevelopEvent.md  all_func_test.py  api.md  blinking_client.py  blinking_plugin.py  get_expressions_plugin.py  how to use gradio.txt  main.py  pyproject.toml  simple_test.py  test_callback.py  test_plugin.py  vts_emotion.py  vts_face_control_plugin.py  vts_unified_plugin.py  vts默认参数.txt
.cursor/rules/: main-rule.mdc
.github/workflows/: release.yml
data/configs/: vts_model_control.yaml
nekro_live_studio/action_handlers/: animation_handler.py  base.py  expression_handler.py  say_handler.py  sound_play_handler.py
nekro_live_studio/api/: websockets.py
nekro_live_studio/configs/: base.py  config.py
nekro_live_studio/controllers/: base_config.py  base_controller.py  breathing_controller.py  config.py  config_manager.py  mouth_expression_controller.py  mouth_sync.py
nekro_live_studio/schemas/: actions.py  live.py  netease_cloud_music.py
nekro_live_studio/services/: action_scheduler.py  animation_player.py  audio_manager.py  audio_player.py  controller_manager.py  ffmpeg.py  tweener.py  websocket_manager.py
nekro_live_studio/utils/: easing.py  logger.py  sync.py
temp/: blinking_client.py  easing.py  vts_face_control_plugin.py
vts_client/: client.py  models.py  plugin.py
vts_face_control/: config.py  main.py
vts_face_control/animation/: base_animation.py  blink.py  body_movement.py  breathing.py  manager.py  mouth_expression.py
vts_model_control/: animate.json  config.py  main.py  new_request.json  test.py
vts_model_control/animation/: blink_controller.py  body_swing_controller.py  breathing_controller.py  easing.py  mouth_expression_controller.py  tweener.py
vts_model_control/animations/: base_controller.py  blink_controller.py  body_swing_controller.py  breathing_controller.py  mouth_expression_controller.py
vts_model_control/api/: __init__.py  schemas.py  server.py  ws_schemas.py
vts_model_control/client/: bilibili_live.py  event_examples.json  live_modules.md
vts_model_control/config/: config.py
vts_model_control/configs/: config.json  config.py
vts_model_control/controllers/: __init__.py  base_controller.py  blink_controller.py  body_swing_controller.py  breathing_controller.py  lip_sync_controller.py  mouth_expression_controller.py  mouth_sync.py  say_controller.py
vts_model_control/docs/: live.md
vts_model_control/frontend/: subtitles.html
vts_model_control/idle_animations/: base_controller.py  blink_controller.py  body_swing_controller.py  breathing_controller.py  mouth_expression_controller.py
vts_model_control/managers/: vts_manager.py  vts_plugin.py
vts_model_control/schemas/: actions.py  animation_actions.py  animation_template.py  audio.py  bilibili_live.py
vts_model_control/services/: action_scheduler.py  animation_manager.py  animation_player.py  audio_manager.py  audio_player.py  controller_manager.py  ffmpeg.py  idle_animation_manager.py  plugin.py  subtitle_broadcaster.py  tweener.py  vts_plugin.py  websocket_manager.py
vts_model_control/utils/: __init__.py  easing.py  (+3 more)
vts_model_control_old/: __init__.py  main.py  test.py
(+63 files in other folders)
