[project]
name = "vts-face-control-plugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Zaxpris",email = "zaxpris@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gradio-client (>=1.8.0,<2.0.0)",
    "pygame (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
